--- a/SupermarketManagementApp/SupermarketManagementApp.csproj
+++ b/SupermarketManagementApp/SupermarketManagementApp.csproj
@@ -127,11 +127,23 @@
     <Compile Include="GUI\FormMain.Designer.cs">
       <DependentUpon>FormMain.cs</DependentUpon>
     </Compile>
+    <Compile Include="GUI\Invoice\CustomerInvoice\FormCreateCustomerInvoice.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="GUI\Invoice\CustomerInvoice\FormCreateCustomerInvoice.Designer.cs">
+      <DependentUpon>FormCreateCustomerInvoice.cs</DependentUpon>
+    </Compile>
     <Compile Include="GUI\Invoice\CustomerInvoice\FormCustomerInvoiceManagement.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="GUI\Invoice\CustomerInvoice\FormCustomerInvoiceManagement.Designer.cs">
       <DependentUpon>FormCustomerInvoiceManagement.cs</DependentUpon>
+    </Compile>
+    <Compile Include="GUI\Invoice\CustomerInvoice\FormDetailCustomerInvoice.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="GUI\Invoice\CustomerInvoice\FormDetailCustomerInvoice.Designer.cs">
+      <DependentUpon>FormDetailCustomerInvoice.cs</DependentUpon>
     </Compile>
     <Compile Include="GUI\Invoice\SupplierInvoice\FormSupplierInvoiceManagement.cs">
       <SubType>Form</SubType>
@@ -347,8 +359,7 @@
     <None Include="resources\silver-search.png" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="resources\black-delete.png" />
-    <Content Include="resources\black-edit.png" />
+    <None Include="resources\grid-info.png" />
     <None Include="resources\show-password.png" />
     <None Include="resources\hide-password.png" />
     <None Include="resources\supermarket-logo.png" />
