Fix scroll event for FormManagemEmployee

--- a/SupermarketManagementApp/SupermarketManagementApp.csproj
+++ b/SupermarketManagementApp/SupermarketManagementApp.csproj
@@ -467,5 +467,8 @@
   <ItemGroup>
     <None Include="resources\Union.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="resources\icon-avatar.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
