--- a/SupermarketManagementApp/SupermarketManagementApp.csproj
+++ b/SupermarketManagementApp/SupermarketManagementApp.csproj
@@ -239,6 +239,12 @@
     <Compile Include="GUI\Product\ProductInInventory\FormProductInventoryManagement.Designer.cs">
       <DependentUpon>FormProductInventoryManagement.cs</DependentUpon>
     </Compile>
+    <Compile Include="GUI\Product\ProductOnShelf\FormDetailProductOnShelf.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="GUI\Product\ProductOnShelf\FormDetailProductOnShelf.Designer.cs">
+      <DependentUpon>FormDetailProductOnShelf.cs</DependentUpon>
+    </Compile>
     <Compile Include="GUI\Product\ProductOnShelf\FormProductShelfManagement.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -384,6 +390,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="GUI\Product\ProductInInventory\FormProductInventoryManagement.resx">
       <DependentUpon>FormProductInventoryManagement.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="GUI\Product\ProductOnShelf\FormDetailProductOnShelf.resx">
+      <DependentUpon>FormDetailProductOnShelf.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="GUI\Product\ProductOnShelf\FormProductShelfManagement.resx">
       <DependentUpon>FormProductShelfManagement.cs</DependentUpon>
