--- a/SupermarketManagementApp/packages.config
+++ b/SupermarketManagementApp/packages.config
@@ -5,4 +5,5 @@
   <package id="LiveCharts" version="0.9.7" targetFramework="net472" />
   <package id="LiveCharts.WinForms" version="0.9.7.1" targetFramework="net472" />
   <package id="LiveCharts.Wpf" version="0.9.7" targetFramework="net472" />
+  <package id="Microsoft.Office.Interop.Excel" version="15.0.4795.1001" targetFramework="net472" />
 </packages>
